[gd_scene load_steps=12 format=3 uid="uid://d288g7tvym65q"]

[ext_resource type="Script" uid="uid://ilbv0ktx5rak" path="res://scenes/ui/shop_panel.gd" id="1_sblsc"]
[ext_resource type="PackedScene" uid="uid://bjl76cq3iw1n" path="res://scenes/ui/shop_item.tscn" id="1_wxg4i"]
[ext_resource type="Texture2D" uid="uid://t4yejuuqutgx" path="res://assets/sprites/ui/money.png" id="3_g0um3"]
[ext_resource type="AudioStream" uid="uid://dm5knn6xtsp0n" path="res://assets/audio/sfx/Click.wav" id="3_qecyp"]
[ext_resource type="Resource" uid="uid://0cit8u5r4udr" path="res://resources/species/egg.tres" id="4_j21la"]
[ext_resource type="Resource" uid="uid://bwp55ptwbdoor" path="res://resources/species/bunny.tres" id="4_sjk1b"]
[ext_resource type="Resource" uid="uid://twyq25kbklef" path="res://resources/species/worm.tres" id="6_qeixu"]
[ext_resource type="Resource" uid="uid://dodlsy8vfx76n" path="res://resources/species/crow.tres" id="7_4i0u3"]
[ext_resource type="Resource" uid="uid://bnr020mddktae" path="res://resources/species/grass.tres" id="8_udh10"]
[ext_resource type="Resource" uid="uid://biaj8l2hd8kum" path="res://resources/species/badger.tres" id="9_qjhny"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wxg4i"]

[node name="ShopPanel" type="PanelContainer"]
custom_minimum_size = Vector2(480, 0)
script = ExtResource("1_sblsc")

[node name="SFX_Click" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_qecyp")
volume_db = -12.0
bus = &"SFX"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer/Header"]
layout_mode = 2
text = "Shop"

[node name="NegativeSpace" type="Panel" parent="VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_wxg4i")

[node name="ReRoll" type="Button" parent="VBoxContainer/Header"]
layout_mode = 2
theme_type_variation = &"SmallPurpleButton"
theme_override_constants/h_separation = 0
theme_override_constants/icon_max_width = 28
text = "RE-ROLL:  30"
icon = ExtResource("3_g0um3")
icon_alignment = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(430, 426)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 2
theme_override_constants/v_separation = 10
columns = 2

[node name="ShopItem" parent="VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource("1_wxg4i")]
layout_mode = 2
species = ExtResource("4_j21la")

[node name="ShopItem2" parent="VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource("1_wxg4i")]
layout_mode = 2
species = ExtResource("4_sjk1b")

[node name="ShopItem3" parent="VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource("1_wxg4i")]
layout_mode = 2
species = ExtResource("6_qeixu")
price = 1

[node name="ShopItem4" parent="VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource("1_wxg4i")]
layout_mode = 2
species = ExtResource("7_4i0u3")

[node name="ShopItem5" parent="VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource("1_wxg4i")]
layout_mode = 2
species = ExtResource("8_udh10")
price = 1077

[node name="ShopItem6" parent="VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource("1_wxg4i")]
layout_mode = 2
species = ExtResource("9_qjhny")
